# fabric_tst

./: README.md  pyproject.toml
fabricapi/: db.sqlite3  manage.py
fabricapi/authapp/management/commands/: create_base_permissions.py  create_some_users.py
fabricapi/authapp/migrations/: 0001_initial.py
fabricapi/fabricapi/: urls.py  wsgi.py
fabricapi/quizapp/: admin.py  models.py  serializers.py  views.py
fabricapi/quizapp/migrations/: 0001_initial.py
fabricapi/settings/: .env  .env.template
fabricapi/settings/django/: base.py  dev.py
